Ver facturas en el Index

--- a/jaxistore/web/templates/factura.html
+++ b/jaxistore/web/templates/factura.html
@@ -137,13 +137,13 @@
                                 <label>Fecha de entrega: </label>
                                 <input type="date" name="fecha_entrega" class="form-control" id="fecha_entrega" required />
                                 <label>Dirección de entrega: </label>
-                                <input type="text" name="direccion_entrega" class="form-control" required />
+                                <input type="text" name="direccion_cliente" class="form-control" readonly />
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="form-row d-flex justify-content-center">
-                    <button class="btn btn-primary btn-block py-3 px-5 col-8 control-group" type="submit">Aceptar</button>
+                    <button class="btn btn-primary btn-block py-3 px-5 col-4 control-group" type="submit">Aceptar</button>
                 </div>
             </form>
         </div>
