--- a/jaxistore/web/templates/index.html
+++ b/jaxistore/web/templates/index.html
@@ -23,9 +23,11 @@
                                 <tr>
                                   <th scope="col">Codigo</th>
                                   <th scope="col">Empresa</th>
+                                  <th scope="col">Estado</th>
                                   <th scope="col">Total</th>
                                   <th scope="col">Acciones</th>
                                   <th scope="col">Exportar a PDF</th>
+                                  <th scope="col">Rectificar factura</th>
                                 </tr>
                               </thead>
                               <tbody>
@@ -33,10 +35,12 @@
                                 <tr scope="row">
                                   <th> {{ factura.id_orden_compra }} </th>
                                   <td> {{ factura.nombre_cliente }} </td>
+                                  <td> {{ factura.estado }} </td>
                                   {% load humanize %}
                                   <td> ${{ factura.total_pagar|intcomma }} </td>
                                   <td><a href="/verfactura/{{factura.id_orden_compra}}/" class="btn py-0 btn-primary btn-sm">Ver</a></td>
                                   <td><a href="{% url 'export_order' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm">Exportar</a></td>
+                                  <td><a href="{% url 'rectificar_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm">Rectificar</a></td>
                                 </tr>
                                 {% endfor %}
                               </tbody>
