--- a/jaxistore/web/templates/base.html
+++ b/jaxistore/web/templates/base.html
@@ -24,7 +24,7 @@
     <link href="{% static "lib/owlcarousel/assets/owl.carousel.min.css" %}" rel="stylesheet">
     <link href="{% static "lib/lightbox/css/lightbox.min.css" %}" rel="stylesheet">
     <link href="{% static "css/style.css" %}" rel="stylesheet">
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
 
 </head>
