--- a/jaxistore/web/templates/entrega_factura.html
+++ b/jaxistore/web/templates/entrega_factura.html
@@ -7,16 +7,16 @@
     <div class="containerfactura py-5">
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <h1 class="section-title position-relative text-center mb-5">Orden de compra</h1>
+                <h1 class="section-title position-relative text-center mb-5">Registrar Entrega</h1>
             </div>
             <form action="" method="POST">
                 {% csrf_token %}
                 <div class="col-lg-12">
                     <div class="order-card bg-light rounded p-5">
-                        <div class="row text-center mb-5">
-                            <div class="col-lg-4">
+                        <div class="row text-center mb-5">   
+                            <div class="col-lg-4"> 
                                 <label>Nº de orden: </label>
-                                <input type="text" name="orden" class="form-control bg-white" id="orden" readonly />
+                                <input type="text" value="{{ factura.id_orden_compra }}" name="orden" class="form-control bg-white" id="orden" readonly />
                             </div>
                         </div>
 
@@ -25,56 +25,46 @@
                                 <h3>Datos del proveedor</h3>
                                 <div>
                                     <label>Nombre o razón social: </label>
-                                    <input type="text" name="nombre_proveedor" class="form-control"
-                                        id="nombre_proveedor" required />
+                                    <input type="text" value="{{ factura.nombre_proveedor }}" name="nombre_proveedor" class="form-control bg-white" id="nombre_proveedor" readonly />
                                 </div>
                                 <div>
                                     <label>CUIT: </label>
-                                    <input type="text" name="cuit_proveedor" class="form-control" id="cuit_proveedor"
-                                        required />
+                                    <input type="text" value="{{ factura.cuit_proveedor }}" name="cuit_proveedor" class="form-control bg-white" id="cuit_proveedor" readonly />
                                 </div>
                                 <div>
                                     <label>Dirección: </label>
-                                    <input type="text" name="direccion_proveedor" class="form-control"
-                                        id="direccion_proveedor" required />
+                                    <input type="text" value="{{ factura.direccion_proveedor }}" name="direccion_proveedor" class="form-control bg-white" id="direccion_proveedor" readonly />
                                 </div>
                                 <div>
                                     <label>Teléfono: </label>
-                                    <input type="text" name="telefono_proveedor" class="form-control"
-                                        id="telefono_proveedor" required />
+                                    <input type="text" value="{{ factura.telefono_proveedor }}" name="telefono_proveedor" class="form-control bg-white" id="telefono_proveedor" readonly />
                                 </div>
                                 <div>
                                     <label>Correo electrónico: </label>
-                                    <input type="email" name="correo_proveedor" class="form-control"
-                                        id="email_proveedor" required />
+                                    <input type="email" value="{{ factura.correo_proveedor }}" name="correo_proveedor" class="form-control bg-white" id="email_proveedor" readonly />
                                 </div>
                             </div>
                             <div class="section">
                                 <h3>Datos del cliente</h3>
                                 <div>
                                     <label>Nombre o razón social: </label>
-                                    <input type="text" name="nombre_cliente" class="form-control" id="nombre_cliente"
-                                        required />
+                                    <input type="text" value="{{ factura.nombre_cliente }}" name="nombre_cliente" class="form-control bg-white" id="nombre_cliente" readonly />
                                 </div>
                                 <div>
                                     <label>CUIT: </label>
-                                    <input type="text" name="cuit_cliente" class="form-control" id="cuit_cliente"
-                                        required />
+                                    <input type="text" value="{{ factura.cuit_cliente }}" name="cuit_cliente" class="form-control bg-white" id="cuit_cliente" readonly />
                                 </div>
                                 <div>
                                     <label>Dirección: </label>
-                                    <input type="text" name="direccion_cliente" class="form-control"
-                                        id="direccion_cliente" required />
+                                    <input type="text" value="{{ factura.direccion_cliente }}" name="direccion_cliente" class="form-control bg-white" id="direccion_cliente" readonly />
                                 </div>
                                 <div>
                                     <label>Teléfono: </label>
-                                    <input type="text" name="telefono_cliente" class="form-control"
-                                        id="telefono_cliente" required />
+                                    <input type="text" value="{{ factura.telefono_cliente }}" name="telefono_cliente" class="form-control bg-white" id="telefono_cliente" readonly />
                                 </div>
                                 <div>
                                     <label>Correo electrónico: </label>
-                                    <input type="email" name="correo_cliente" class="form-control" id="email_cliente"
-                                        required />
+                                    <input type="email" value="{{ factura.correo_cliente }}" name="correo_cliente" class="form-control bg-white" id="email_cliente" readonly />
                                 </div>
                             </div>
                         </div>
@@ -90,10 +80,10 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td><input type="text" name="rut_transporte" class="form-control" required /></td>
-                                    <td><input type="text" name="patente" class="form-control" required /></td>
-                                    <td><input type="text" name="rut_chofer" class="form-control" required /></td>
-                                    <td><input type="text" name="nombre_chofer" class="form-control" required /></td>
+                                    <td><input type="text" value="{{ factura.rut_transporte }}" name="rut_transporte" class="form-control bg-white" readonly /></td>
+                                    <td><input type="text" value="{{ factura.patente }}" name="patente" class="form-control bg-white" readonly /></td>
+                                    <td><input type="text" value="{{ factura.rut_chofer }}" name="rut_chofer" class="form-control bg-white" readonly /></td>
+                                    <td><input type="text" value="{{ factura.nombre_chofer }}" name="nombre_chofer" class="form-control bg-white" readonly /></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -108,76 +98,56 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                {% for producto in factura.productos.all %}
                                 <tr class="producto">
-                                    <td><input type="text" name="producto[]" class="form-control" required /></td>
-                                    <td><input type="number" name="precio[]" class="form-control precio" required />
-                                    </td>
-                                    <td><input type="number" name="cantidad[]" class="form-control cantidad" required />
-                                    </td>
-                                    <td><input type="text" name="total[]" class="form-control bg-white total"
-                                            readonly /></td>
+                                    <td><input type="text" name="producto[]" class="form-control bg-white" value="{{ producto.nombre }}" readonly /></td>
+                                    <td><input type="number" name="precio[]" class="form-control precio bg-white" value="{{ producto.precio }}" readonly /></td>
+                                    <td><input type="number" name="cantidad[]" class="form-control cantidad bg-white" value="{{ producto.cantidad }}" readonly /></td>
+                                    <td><input type="text" name="total[]" class="form-control bg-white total" value="{{ producto.precio_total }}" readonly /></td>
                                 </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
-                        <div class="form-row d-flex justify-content-center">
-                            <button type="button" class="btn btn-primary btn-block py-3 px-5 col-3 control-group"
-                                id="addProductButton">Agregar producto</button>
-                        </div>
 
                         <div class="totals d-flex justify-content-end flex-column align-items-end">
                             <div class="col-lg-4 d-flex justify-content-end">
                                 <label>Total pedido: </label>
-                                <input type="text" name="total_pedido" class="form-control bg-white" id="total_pedido"
-                                    readonly />
+                                <input type="text" name="total_pedido" class="form-control bg-white" id="total_pedido" readonly />
                             </div>
-                            <div class="col-lg-4 d-flex justify-content-end">
+                            <div class="col-lg-4 d-flex justify-content-end"> 
                                 <label>IVA 19%: </label>
                                 <input type="text" name="iva" class="form-control bg-white" id="iva" readonly />
                             </div>
                             <div class="col-lg-4 d-flex justify-content-end">
                                 <label>Total a pagar: </label>
-                                <input type="text" name="total_pagar" class="form-control bg-white" id="total_pagar"
-                                    readonly />
+                                <input type="text" name="total_pagar" class="form-control bg-white" id="total_pagar" readonly />
                             </div>
                         </div>
 
                         <h4>Forma de pago</h4>
-                        <select name="forma_pago" class="form-select" aria-label="Default select example">
-                            <option selected>Seleccionar</option>
-                            <option value="Debito">Debito</option>
-                            <option value="Credito">Credito</option>
-                        </select>
+                        <p>{{ factura.forma_pago }}</p>
 
                         <div class="footer">
                             <div class="section">
                                 <label>Fecha de entrega: </label>
-                                <input type="date" name="fecha_entrega" class="form-control" id="fecha_entrega"
-                                    required />
+                                <input type="date" value="{{ factura.fecha_entrega|date:'Y-m-d' }}" name="fecha_entrega" class="form-control bg-white" id="fecha_entrega" readonly />
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="form-row d-flex justify-content-center">
-                    <button class="btn btn-primary btn-block py-3 px-5 col-4 control-group"
-                        type="submit">Aceptar</button>
+
+                <!-- ACeptar/rechazar -->
+                <div class="row d-flex justify-content-center">
+                    <a href="{% url "aceptar_entrega" factura.id_orden_compra %}" class="btn btn-primary btn-block py-3 px-5 col-4 control-group">Aceptar entrega</a>
+                    <a href="{% url "rechazar_entrega" factura.id_orden_compra %}" class="btn btn-primary btn-block mt-0 ml-3 py-3 px-5 col-4 control-group">Rechazar entrega</a>
                 </div>
+
+
             </form>
         </div>
     </div>
 </div>
 
-{% if mensaje_factura_creada %}
-<script>
-    swal({
-        title: '¡Factura creada!',
-        text: "Tu factura fue creada exitosamente.",
-        icon: 'success',
-        button: 'Aceptar'
-    }).then(() => {
-        window.location.href = '{% url "index" %}'; // Cambia esta URL por la página de destino
-    });
-</script>
-{% endif %}
 
 <script>
     function formatCurrency(value) {
@@ -196,8 +166,8 @@
     function calculateSubtotal() {
         var rows = document.querySelectorAll('#productos-table tbody tr');
         var subtotal = 0;
-        rows.forEach(function (row) {
-            var total = parseFloat(row.querySelector('.total').value.replace(/[^0-9.-]+/g, "")) || 0;
+        rows.forEach(function(row) {
+            var total = parseFloat(row.querySelector('.total').value.replace(/[^0-9.-]+/g,"")) || 0;
             subtotal += total;
         });
         document.getElementById('total_pedido').value = formatCurrency(subtotal);
@@ -215,33 +185,19 @@
         document.getElementById('total_pagar').value = formatCurrency(totalPagar);
     }
 
-    document.querySelectorAll('.precio, .cantidad').forEach(function (element) {
-        element.addEventListener('input', function () {
+    document.querySelectorAll('.precio, .cantidad').forEach(function(element) {
+        element.addEventListener('input', function() {
             var row = this.closest('tr');
             calculateTotal(row);
         });
     });
 
-    document.getElementById('addProductButton').addEventListener('click', function () {
-        var table = document.getElementById('productos-table').getElementsByTagName('tbody')[0];
-        var newRow = table.rows[0].cloneNode(true);
-
-        // Limpiar los valores de los inputs clonados
-        var inputs = newRow.getElementsByTagName('input');
-        for (var i = 0; i < inputs.length; i++) {
-            inputs[i].value = '';
-        }
-
-        table.appendChild(newRow);
-
-        // Añadir evento a los nuevos inputs
-        newRow.querySelectorAll('.precio, .cantidad').forEach(function (element) {
-            element.addEventListener('input', function () {
-                var row = this.closest('tr');
-                calculateTotal(row);
-            });
-        });
-    });
+    document.addEventListener('DOMContentLoaded', function() {
+        calculateTotalPagar()
+        calculateIVA()
+        calculateSubtotal()
+        calculateTotal()
+    })
 </script>
 
 {% endblock contenido %}
