--- a/jaxistore/web/templates/index.html
+++ b/jaxistore/web/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load humanize %}
 
 {% block  contenido %}
 
@@ -16,31 +17,32 @@
                     <a href="/factura/" class="btn btn-primary btn-block py-3 px-5 mb-3 col-3 control-group">Agregar factura</a>
                 </div>
                 <div class="bg-light rounded p-5">
-                    <div id="success"></div>
                     <div class="invoice-list">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
                                   <th scope="col">Codigo</th>
                                   <th scope="col">Empresa</th>
-                                  <th scope="col">Estado</th>
+                                  <th scope="col">Estado Factura</th>
+                                  <th scope="col">Estado Envío</th>
                                   <th scope="col">Total</th>
-                                  <th scope="col">Acciones</th>
-                                  <th scope="col">Exportar a PDF</th>
-                                  <th scope="col">Rectificar factura</th>
+                                  <th scope="col" class="text-center">Acciones</th>
                                 </tr>
                               </thead>
                               <tbody>
                                 {% for factura in facturas %}
                                 <tr scope="row">
-                                  <th> {{ factura.id_orden_compra }} </th>
-                                  <td> {{ factura.nombre_cliente }} </td>
-                                  <td> {{ factura.estado }} </td>
-                                  {% load humanize %}
-                                  <td> ${{ factura.total_pagar|intcomma }} </td>
-                                  <td><a href="/verfactura/{{factura.id_orden_compra}}/" class="btn py-0 btn-primary btn-sm">Ver</a></td>
-                                  <td><a href="{% url 'export_order' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm">Exportar</a></td>
-                                  <td><a href="{% url 'rectificar_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm">Rectificar</a></td>
+                                  <th>{{ factura.id_orden_compra }}</th>
+                                  <td>{{ factura.nombre_cliente }}</td>
+                                  <td>{{ factura.get_estado_display }}</td>
+                                  <td>{{ factura.get_estado_entrega_display }}</td>
+                                  <td>${{ factura.total_pagar | intcomma }}</td>
+                                  <td class="text-center">
+                                    <a href="/verfactura/{{factura.id_orden_compra}}/" class="btn py-0 btn-primary btn-sm"><i class="fas fa-eye"></i></a>
+                                    <a href="{% url 'rectificar_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-edit"></i></a>
+                                    <a href="{% url 'export_order' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-file-export"></i></a>
+                                    <a href="{% url 'entrega_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-truck"></i></a>
+                                  <td>
                                 </tr>
                                 {% endfor %}
                               </tbody>
