--- a/jaxistore/web/templates/index.html
+++ b/jaxistore/web/templates/index.html
@@ -41,7 +41,13 @@
                                     <a href="/verfactura/{{factura.id_orden_compra}}/" class="btn py-0 btn-primary btn-sm"><i class="fas fa-eye"></i></a>
                                     <a href="{% url 'rectificar_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-edit"></i></a>
                                     <a href="{% url 'export_order' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-file-export"></i></a>
+
+                                    {% if factura.estado_entrega != 'EN' %}
                                     <a href="{% url 'entrega_factura' factura.id_orden_compra %}" class="btn py-0 btn-primary btn-sm"><i class="fas fa-truck"></i></a>
+                                    {% else %}
+                                    <button class="btn py-0 btn-deshabilitado btn-dark btn-sm" disabled><i class="fas fa-truck"></i></button>
+                                    {% endif %}
+
                                   <td>
                                 </tr>
                                 {% endfor %}
